[package]
name = "hopfield"
version = "0.1.0"
authors = ["Tom Watson <tom_w@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
num-traits = "0.2.12"
ndarray = "0.13.1"
num = "0.3.0"

[profile.release]
lto = true
